--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 		</nav>
 		<div class="inner">
 			<div class="content">
-				<h1>Geometric <span class="line2">Reflections of the </span>Soul</h1>
+				<h1>Geometric <span style="font-size: 60%">Reflections of the </span><br>Soul</h1>
 				<p>by Iris J. Klein</p>
 			</div>
 		</div>
@@ -41,59 +41,76 @@
 		</p>
 		<p style="text-indent: 6%;">
 
-Iris Klein was exposed to classical and jazzy sounds from her musical family while she was in the womb. Her grandfather, musician David Glass, is best known for his student Sheldon Harnick, who wrote the lyrics to the award-winning Broadway musical Fiddler on the Roof.
+Iris Klein was exposed to classical and jazzy sounds from her musical family while she was in the womb. Her grandfather, musician David Glass, is best known for his student Sheldon Harnick, who wrote the lyrics to the award-winning Broadway musical <strong><em>Fiddler on the Roof</em></strong>.
 A quiet and introverted young girl, Iris began using photography as a way to express herself. Iris' photography and abstract art are expressions of her intuitive artistic talent. In her pursuit for a life closer to nature, Iris moved to Colorado where she was smitten by the Rocky Mountains' beauty and recorded its many splendors. Through contrast and color saturation she excelled at transforming and composing ordinary wild and still life into distinctive images, while capturing the calm and harmony of the mountains. Iris gained regional fame for her sensitive nature photographs and personalized portraits taken in outdoor settings. She became known as "The Iris of the West." Iris' love for nature grew as did her spirituality. Moving to Austin, Texas she found new meaning in her life that would guide her to an even deeper love for the arts. Whenever she felt an urge to express "something" she would take a black gel pen, a piece of paper and "doodle".
-Iris stored hundreds of her "doodles" in a file cabinet for years until she was encouraged to compile a portfolio of her artwork. Geometric Reflections of the Soul is that collection. Iris enhances the use of contrast with the introduction of rhythm and movement by juxtaposing black and white creative geometric shapes which are reflections of the artist's inner soul.
+Iris stored hundreds of her "doodles" in a file cabinet for years until she was encouraged to compile a portfolio of her artwork. <strong><em>Geometric Reflections of the Soul</em></strong> is that collection. Iris enhances the use of contrast with the introduction of rhythm and movement by juxtaposing black and white creative geometric shapes which are reflections of the artist's inner soul.
+<!--NOTE: add some text about judaica-->
 		</p>
 	</section>
 	<section class="sidebar">
-		<img src="img/imgJudaic01.jpeg" alt="headshot">
+		<img src="img/njkPortraitForBio.gif" alt="headshot">
 	</section>
 	<div class="clearfix">
 	</div>
 	<a name="gallery-j">
 		<h2>My Judaic Gallery</h2>
 		<section class="one-third-port">
-			<a href="http://127.0.0.1:5500/img/imgJudaic01.jpeg"><img src="img/imgJudaic01.jpeg" alt="">  </a>
+			<a href="http://127.0.0.1:5500/img/img001watermark.jpg"><img src="img/img001watermark.jpg" alt="">  </a>
 		</section>
 		<section class="one-third-port">
-			<a href="http://127.0.0.1:5500/img/imgJudaic02.jpeg"><img src="img/imgJudaic02.jpeg" alt="">  </a>
+			<a href="http://127.0.0.1:5500/img/img002watermark.jpg"><img src="img/img002watermark.jpg" alt="">  </a>
 		</section>
 		<section class="one-third-port">
-			<a href="http://127.0.0.1:5500/img/imgJudaic03.jpeg"><img src="img/imgJudaic03.jpeg" alt="">  </a>
+			<a href="http://127.0.0.1:5500/img/img003watermark.jpg"><img src="img/img003watermark.jpg" alt="">  </a>
 		</section>
 		<section class="one-third-port">
-			<a href="http://127.0.0.1:5500/img/imgJudaic04.jpeg"><img src="img/imgJudaic04.jpeg" alt="">  </a>
+			<a href="http://127.0.0.1:5500/img/img004watermark.jpg"><img src="img/img004watermark.jpg" alt="">  </a>
 		</section>
 		<section class="one-third-port">
-			<a href="http://127.0.0.1:5500/img/imgJudaic05.jpeg"><img src="img/imgJudaic05.jpeg" alt="">  </a>
+			<a href="http://127.0.0.1:5500/img/img005watermark.jpg"><img src="img/img005watermark.jpg" alt="">  </a>
 		</section>
 		<section class="one-third-port">
-			<a href="http://127.0.0.1:5500/img/imgJudaic06.jpeg"><img src="img/imgJudaic06.jpeg" alt="">  </a>
+			<a href="http://127.0.0.1:5500/img/img006watermark.jpg"><img src="img/img006watermark.jpg" alt="">  </a>
 		</section>
 		<section class="one-third-port">
-			<a href="http://127.0.0.1:5500/img/imgJudaic07.jpeg"><img src="img/imgJudaic07.jpeg" alt="">  </a>
+			<a href="http://127.0.0.1:5500/img/img007watermark.jpg"><img src="img/img007watermark.jpg" alt="">  </a>
 		</section>
 		<section class="one-third-port">
-			<a href="http://127.0.0.1:5500/img/imgJudaic08.jpeg"><img src="img/imgJudaic08.jpeg" alt="">  </a>
+			<a href="http://127.0.0.1:5500/img/img008watermark.jpg"><img src="img/img008watermark.jpg" alt="">  </a>
 		</section>
 		<section class="one-third-port">
-			<a href="http://127.0.0.1:5500/img/imgJudaic09.jpeg"><img src="img/imgJudaic09.jpeg" alt="">  </a>
+			<a href="http://127.0.0.1:5500/img/img009watermark.jpg"><img src="img/img009watermark.jpg" alt="">  </a>
 		</section>
 		<section class="one-third-port">
-			<a href="http://127.0.0.1:5500/img/imgJudaic10.jpeg"><img src="img/imgJudaic10.jpeg" alt="">  </a>
+			<a href="http://127.0.0.1:5500/img/img010watermark.jpg"><img src="img/img010watermark.jpg" alt="">  </a>
 		</section>
 		<section class="one-third-port">
-			<a href="http://127.0.0.1:5500/img/imgJudaic11.jpeg"><img src="img/imgJudaic11.jpeg" alt="">  </a>
+			<a href="http://127.0.0.1:5500/img/img011watermark.jpg"><img src="img/img011watermark.jpg" alt="">  </a>
 		</section>
 		<section class="one-third-port">
-			<a href="http://127.0.0.1:5500/img/imgJudaic12.jpeg"><img src="img/imgJudaic12.jpeg" alt="">  </a>
+			<a href="http://127.0.0.1:5500/img/img012watermark.jpg"><img src="img/img012watermark.jpg" alt="">  </a>
 		</section>
 		<section class="one-third-port">
-			<a href="http://127.0.0.1:5500/img/imgJudaic13.jpeg"><img src="img/imgJudaic13.jpeg" alt="">  </a>
+			<a href="http://127.0.0.1:5500/img/img013watermark.jpg"><img src="img/img013watermark.jpg" alt="">  </a>
+		</section>
+		
+		<section class="one-third-port">
+			<a href="http://127.0.0.1:5500/img/img014watermark.jpg"><img src="img/img014watermark.jpg" alt="">  </a>
 		</section>
 		<section class="one-third-port">
-			<a href="http://127.0.0.1:5500/img/imgJudaic14.jpeg"><img src="img/imgJudaic14.jpeg" alt="">  </a>
+			<a href="http://127.0.0.1:5500/img/img015watermark.jpg"><img src="img/img015watermark.jpg" alt="">  </a>
+		</section>
+		<section class="one-third-port">
+			<a href="http://127.0.0.1:5500/img/img016watermark.jpg"><img src="img/img016watermark.jpg" alt="">  </a>
+		</section>
+		<section class="one-third-port">
+			<a href="http://127.0.0.1:5500/img/img017watermark.jpg"><img src="img/img017watermark.jpg" alt="">  </a>
+		</section>
+		<section class="one-third-port">
+			<a href="http://127.0.0.1:5500/img/img018watermark.jpg"><img src="img/img018watermark.jpg" alt="">  </a>
+		</section>
+		<section class="one-third-port">
+			<a href="http://127.0.0.1:5500/img/img019watermark.jpg"><img src="img/img019watermark.jpg" alt="">  </a>
 		</section>
 <div class="clearfix"></div>
 
