rewatermarked everything and new bio photo

--- a/index.html
+++ b/index.html
@@ -48,12 +48,12 @@ Iris stored hundreds of her "doodles" in a file cabinet for years until she was 
 		</p>
 	</section>
 	<section class="sidebar">
-		<img src="img/njkPortraitForBio.gif" alt="headshot">
+		<img src="img\njkPortraitForBio.jpg" alt="headshot">
 	</section>
 	<div class="clearfix">
 	</div>
 	<a name="gallery-j">
-		<h2>My Judaic Gallery</h2>
+		<h2>My Gallery</h2>
 		<section class="one-third-port">
 			<a href="http://127.0.0.1:5500/img/img001watermark.jpg"><img src="img/img001watermark.jpg" alt="">  </a>
 		</section>
