made email form

--- a/index.html
+++ b/index.html
@@ -133,7 +133,16 @@ Iris stored hundreds of her "doodles" in a file cabinet for years until she was 
 	</section>
 <div class="clearfix"></div>
 	<h2>Contact Me</h2>
-	<section class="contact">
+	<section class="left-col">
+		<form action="send_email_to_nechama.php">
+			<label>First Name <input type="text" name="fname" required /></label>
+			<label>Last Name <input type="text" name="lname" required /></label><br/>
+			<label>Email <input type="email" name="email" required /><br/></label>
+			<label>Message <br /><textarea name="message"></textarea><br/></label>
+			<input type="submit" value="Send" />
+		</form>
+	</section>
+	<section class="contact sidebar">
 		<p>Iris J. Klein <br class="break"><a href="mailto:iris@irisjklein.com">iris@irisjklein.com</a><br class="break"> 1-561-664-4500
 		<br class="break">
 		<a href=	 "https://irisjklein.com">irisjklein.com</a>
