v1 of email form

--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@ Iris stored hundreds of her "doodles" in a file cabinet for years until she was 
 <div class="clearfix"></div>
 	<h2>Contact Me</h2>
 	<section class="left-col">
-		<form action="send_email_to_nechama.php">
+		<form action="htdocs/send_email_to_nechama.php">
 			<label>First Name <input type="text" name="fname" required /></label>
 			<label>Last Name <input type="text" name="lname" required /></label><br/>
 			<label>Email <input type="email" name="email" required /><br/></label>
