working on form

--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@ Iris stored hundreds of her "doodles" in a file cabinet for years until she was 
 	<section class="left-col">
 		<!--<form method="POST" action="https://formsubmit.co/alizaasdf1234@gmail.com" >-->
 		<!--<form method="post" action="htdocs/send_email_to_nechama.php">-->
-			<form method="post" name="myemailform" action="send_email.php">
+			<form method="post" name="myemailform" action="htdocs/send_email.php">
 
 				Enter Name:	<input type="text" name="name"> <br/>
 				
