adding PHP mailer

--- a/index.html
+++ b/index.html
@@ -134,10 +134,10 @@ Iris stored hundreds of her "doodles" in a file cabinet for years until she was 
 <div class="clearfix"></div>
 	<h2>Contact Me</h2>
 	<section class="left-col">
-		<form method="POST" action="https://formsubmit.co/alizaasdf1234@gmail.com" >
+		<!--<form method="POST" action="https://formsubmit.co/alizaasdf1234@gmail.com" >-->
 		<!--<form method="post" action="htdocs/send_email_to_nechama.php">-->
-		<!--	<form method="post" name="myemailform" action="htdocs/send_email.php">-->
-
+			<!--<form method="post" name="myemailform" action="htdocs/send_email.php">-->
+				<form method="post" name="myemailform" action="mailUsingPHPMailer.php">
 				Enter Name:	<input type="text" name="name"> <br/>
 				
 				Enter Email Address:	<input type="email" name="email"><br/>
