adding social icons as images

--- a/index.html
+++ b/index.html
@@ -147,19 +147,19 @@
 <div class="clearfix"></div>
 <footer>
 	<ul class="social">
-		<li> <a href="https://www.facebook.com/yttairis"><i class="fa fa-facebook"></i> </a> 
+		<li> <a href="https://www.facebook.com/yttairis"><img src="/./img/icon-facebook.jpeg" class="fa fa-facebook"> </a> 
 		</li>
 		
-		<li> <a href="https://www.linkedin.com/in/iris-klein-bennish-56a72421" target="_blank"><i class="fa fa-linkedin"></i> </a> 
+		<li> <a href="https://www.linkedin.com/in/iris-klein-bennish-56a72421" target="_blank"><img src="/./img/icon-linkedin.jpeg" class="fa fa-linkedin"></i> </a> 
 		</li>
 		
-		<li> <a href="" target="_blank"><i class="fa fa-twitter"></i> </a> 
+		<li> <a href="" target="_blank"><img src="/./img/icon-twitter.jpg" class="fa fa-twitter"> </a> 
 		</li>
 		
-		<li> <a href="" target="_blank"><i class="fa fa-youtube"></i> </a> 
+		<li> <a href="" target="_blank"><img src="/./img/icon-youtube.jpeg" class="fa fa-youtube"> </a> 
 		</li>
 		
-		<li> <a href="" target="_blank"><i class="fa fa-instagram"></i> </a> 
+		<li> <a href="" target="_blank"><img src="/./img/icon-instagram.jpeg" class="fa fa-instagram"> </a> 
 		</li>
 	</ul>
 </footer>
