--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
 				<li><a href="#home">Home</a></li>
 				<li><a href=#about>About Me</a></li>
 				<li><a href="#port">Portfolio</a></li>
-				<li><a href="#gallery-j">Gallery-Judaic</a></li>
-				<li><a href="#gallery-geometric">Gallery-Geometric</a></li>
+				<li><a href="#gallery-j">Gallery</a></li>
+				<!--<li><a href="#gallery-geometric">Gallery-Geometric</a></li>-->
 				<li><a href="#order">Order</a></li>
 				<li><a href="#contact">Contact</a></li>
 			</ul>
