--- a/index.html
+++ b/index.html
@@ -59,62 +59,74 @@
 	</div>
 	<a name="gallery-j">
 		<h2>My Gallery</h2>
-		<section class="one-third-port">
+		<div id="myBtnContainer">
+			<button class="btn active" onclick="filterSelection('all')">Show all</button>
+			<button class="btn" onclick="filterSelection('blue')">Blue</button>
+			<button class="btn" onclick="filterSelection('red')">Red</button>
+			<button class="btn" onclick="filterSelection('yellow')">Yellow</button>
+			<button class="btn" onclick="filterSelection('purple')">Purple</button>
+			<button class="btn" onclick="filterSelection('green')">Green</button>
+			<button class="btn" onclick="filterSelection('orange')">Orange</button>
+			<button class="btn" onclick="filterSelection('pink')">Pink</button>
+			<button class="btn" onclick="filterSelection('brown')">Brown</button>
+			<button class="btn" onclick="filterSelection('black')">Black</button>
+		</div>
+		<section class="one-third-port filterDiv blue">
 			<a href="/./img/img001watermark.jpg"><img src="img/img001watermark.jpg" alt="">  </a>
 		</section>
-		<section class="one-third-port">
+		<section class="one-third-port filterDiv blue">
 			<a href="/./img/img002watermark.jpg"><img src="img/img002watermark.jpg" alt="">  </a>
 		</section>
-		<section class="one-third-port">
+		<section class="one-third-port filterDiv blue">
 			<a href="/./img/img003watermark.jpg"><img src="img/img003watermark.jpg" alt="">  </a>
 		</section>
-		<section class="one-third-port">
+		<section class="one-third-port filterDiv blue">
 			<a href="/./img/img004watermark.jpg"><img src="img/img004watermark.jpg" alt="">  </a>
 		</section>
-		<section class="one-third-port">
+		<section class="one-third-port filterDiv blue">
 			<a href="/./img/img005watermark.jpg"><img src="img/img005watermark.jpg" alt="">  </a>
 		</section>
-		<section class="one-third-port">
+		<section class="one-third-port filterDiv blue">
 			<a href="/./img/img006watermark.jpg"><img src="img/img006watermark.jpg" alt="">  </a>
 		</section>
-		<section class="one-third-port">
+		<section class="one-third-port filterDiv blue">
 			<a href="/./img/img007watermark.jpg"><img src="img/img007watermark.jpg" alt="">  </a>
 		</section>
-		<section class="one-third-port">
+		<section class="one-third-port filterDiv black">
 			<a href="/./img/img008watermark.jpg"><img src="img/img008watermark.jpg" alt="">  </a>
 		</section>
-		<section class="one-third-port">
+		<section class="one-third-port filterDiv black">
 			<a href="/./img/img009watermark.jpg"><img src="img/img009watermark.jpg" alt="">  </a>
 		</section>
-		<section class="one-third-port">
+		<section class="one-third-port filterDiv blue">
 			<a href="/./img/img010watermark.jpg"><img src="img/img010watermark.jpg" alt="">  </a>
 		</section>
-		<section class="one-third-port">
+		<section class="one-third-port filterDiv blue">
 			<a href="/./img/img011watermark.jpg"><img src="img/img011watermark.jpg" alt="">  </a>
 		</section>
-		<section class="one-third-port">
+		<section class="one-third-port filterDiv blue">
 			<a href="/./img/img012watermark.jpg"><img src="img/img012watermark.jpg" alt="">  </a>
 		</section>
-		<section class="one-third-port">
+		<section class="one-third-port filterDiv blue">
 			<a href="/./img/img013watermark.jpg"><img src="img/img013watermark.jpg" alt="">  </a>
 		</section>
 		
-		<section class="one-third-port">
+		<section class="one-third-port filterDiv blue">
 			<a href="/./img/img014watermark.jpg"><img src="img/img014watermark.jpg" alt="">  </a>
 		</section>
-		<section class="one-third-port">
+		<section class="one-third-port filterDiv black">
 			<a href="/./img/img015watermark.jpg"><img src="img/img015watermark.jpg" alt="">  </a>
 		</section>
-		<section class="one-third-port">
+		<section class="one-third-port filterDiv black">
 			<a href="/./img/img016watermark.jpg"><img src="img/img016watermark.jpg" alt="">  </a>
 		</section>
-		<section class="one-third-port">
+		<section class="one-third-port filterDiv black">
 			<a href="/./img/img017watermark.jpg"><img src="img/img017watermark.jpg" alt="">  </a>
 		</section>
-		<section class="one-third-port">
+		<section class="one-third-port filterDiv black">
 			<a href="/./img/img018watermark.jpg"><img src="img/img018watermark.jpg" alt="">  </a>
 		</section>
-		<section class="one-third-port">
+		<section class="one-third-port filterDiv blue">
 			<a href="/./img/img019watermark.jpg"><img src="img/img019watermark.jpg" alt="">  </a>
 		</section>
 <div class="clearfix"></div>
