--- a/index.html
+++ b/index.html
@@ -59,18 +59,20 @@
 	</div>
 	<a name="gallery-j">
 		<h2>My Gallery</h2>
-		<input type="text" id="myInput" onkeyup="myFunction()" placeholder="Search for color">
+		<input type="text" id="myInputColor" onkeyup="myFunction()" placeholder="Search for color">
+		<input type="text" id="myInputShape" onkeyup="myFunction()" placeholder="Seach for shape">
 		<script>
 			function sanitizeString(str) {
         		str = str.replace(/[^a-z0-9áéíóúñü \.,_-]/gim, " ");
         		return str.trim();
     		}
 			function myFunction(){
-				var input, filter,ul,li,img,i,txtValue;
+				var inputColor, inputShape, filter,ul,li,img,i,txtValue;
 
-				input=document.getElementById('myInput');
-
-				filter=sanitizeString(input.value.toLowerCase());
+				inputColor=document.getElementById('myInputColor');
+				inputShape=document.getElementById('myInputShape');
+				filterColor=sanitizeString(inputColor.value.toLowerCase());
+				filterShape=sanitizeString(inputShape.value.toLowerCase());
 				section=document.getElementsByClassName('one-third-port');
 				
 				
@@ -78,7 +80,7 @@
 					img=section[i].querySelector('a img');
 					console.log(img.className);
 					txtValue=img.className.toLowerCase();
-					if(txtValue.indexOf(filter)>-1){
+					if((txtValue.indexOf(filterColor)>-1)&&(txtValue.indexOf(filterShape)>-1)){
 						section[i].style.display="";
 					} else {
 						section[i].style.display="none";
@@ -88,62 +90,62 @@
 			}
 		</script>
 		<section class="one-third-port">
-			<a href="/./img/img001watermark.jpg"><img class="img-blue" src="img/img001watermark.jpg" alt="">  </a>
+			<a href="/./img/img001watermark.jpg"><img class="img-blue-candle" src="img/img001watermark.jpg" alt="">  </a>
 		</section>
 		<section class="one-third-port">
-			<a href="/./img/img002watermark.jpg"><img class="img-blue" src="img/img002watermark.jpg" alt="">  </a>
+			<a href="/./img/img002watermark.jpg"><img class="img-blue-hamsa" src="img/img002watermark.jpg" alt="">  </a>
 		</section>
 		<section class="one-third-port">
-			<a href="/./img/img003watermark.jpg"><img class="img-blue" src="img/img003watermark.jpg" alt="">  </a>
+			<a href="/./img/img003watermark.jpg"><img class="img-blue-hamsa" src="img/img003watermark.jpg" alt="">  </a>
 		</section>
 		<section class="one-third-port">
-			<a href="/./img/img004watermark.jpg"><img class="img-blue" src="img/img004watermark.jpg" alt="">  </a>
+			<a href="/./img/img004watermark.jpg"><img class="img-blue-candle" src="img/img004watermark.jpg" alt="">  </a>
 		</section>
 		<section class="one-third-port">
-			<a href="/./img/img005watermark.jpg"><img class="img-blue" src="img/img005watermark.jpg" alt="">  </a>
+			<a href="/./img/img005watermark.jpg"><img class="img-blue-candle" src="img/img005watermark.jpg" alt="">  </a>
 		</section>
 		<section class="one-third-port">
-			<a href="/./img/img006watermark.jpg"><img class="img-blue" src="img/img006watermark.jpg" alt="">  </a>
+			<a href="/./img/img006watermark.jpg"><img class="img-blue-dreidel" src="img/img006watermark.jpg" alt="">  </a>
 		</section>
 		<section class="one-third-port">
-			<a href="/./img/img007watermark.jpg"><img class="img-blue-tan" src="img/img007watermark.jpg" alt="">  </a>
+			<a href="/./img/img007watermark.jpg"><img class="img-blue-tan-candle" src="img/img007watermark.jpg" alt="">  </a>
 		</section>
 		<section class="one-third-port">
-			<a href="/./img/img008watermark.jpg"><img class="img-black" src="img/img008watermark.jpg" alt="">  </a>
+			<a href="/./img/img008watermark.jpg"><img class="img-black-shofar" src="img/img008watermark.jpg" alt="">  </a>
 		</section>
 		<section class="one-third-port">
-			<a href="/./img/img009watermark.jpg"><img class="img-black" src="img/img009watermark.jpg" alt="">  </a>
+			<a href="/./img/img009watermark.jpg"><img class="img-black-candle" src="img/img009watermark.jpg" alt="">  </a>
 		</section>
 		<section class="one-third-port">
-			<a href="/./img/img010watermark.jpg"><img class="img-blue" src="img/img010watermark.jpg" alt="">  </a>
+			<a href="/./img/img010watermark.jpg"><img class="img-blue-dreidel" src="img/img010watermark.jpg" alt="">  </a>
 		</section>
 		<section class="one-third-port">
-			<a href="/./img/img011watermark.jpg"><img class="img-blue" src="img/img011watermark.jpg" alt="">  </a>
+			<a href="/./img/img011watermark.jpg"><img class="img-blue-hamsa" src="img/img011watermark.jpg" alt="">  </a>
 		</section>
 		<section class="one-third-port">
-			<a href="/./img/img012watermark.jpg"><img class="img-blue" src="img/img012watermark.jpg" alt="">  </a>
+			<a href="/./img/img012watermark.jpg"><img class="img-blue-hamsa" src="img/img012watermark.jpg" alt="">  </a>
 		</section>
 		<section class="one-third-port">
-			<a href="/./img/img013watermark.jpg"><img class="img-blue" src="img/img013watermark.jpg" alt="">  </a>
+			<a href="/./img/img013watermark.jpg"><img class="img-blue-hamsa" src="img/img013watermark.jpg" alt="">  </a>
 		</section>
 		
 		<section class="one-third-port">
-			<a href="/./img/img014watermark.jpg"><img class="img-black" src="img/img014watermark.jpg" alt="">  </a>
+			<a href="/./img/img014watermark.jpg"><img class="img-black-star" src="img/img014watermark.jpg" alt="">  </a>
 		</section>
 		<section class="one-third-port">
-			<a href="/./img/img015watermark.jpg"><img class="img-black" src="img/img015watermark.jpg" alt="">  </a>
+			<a href="/./img/img015watermark.jpg"><img class="img-black-geometric" src="img/img015watermark.jpg" alt="">  </a>
 		</section>
 		<section class="one-third-port">
-			<a href="/./img/img016watermark.jpg"><img class="img-black" src="img/img016watermark.jpg" alt="">  </a>
+			<a href="/./img/img016watermark.jpg"><img class="img-black-shofar" src="img/img016watermark.jpg" alt="">  </a>
 		</section>
 		<section class="one-third-port">
-			<a href="/./img/img017watermark.jpg"><img class="img-black" src="img/img017watermark.jpg" alt="">  </a>
+			<a href="/./img/img017watermark.jpg"><img class="img-black-geometric" src="img/img017watermark.jpg" alt="">  </a>
 		</section>
 		<section class="one-third-port">
-			<a href="/./img/img018watermark.jpg"><img class="img-black" src="img/img018watermark.jpg" alt="">  </a>
+			<a href="/./img/img018watermark.jpg"><img class="img-black-geometric" src="img/img018watermark.jpg" alt="">  </a>
 		</section>
 		<section class="one-third-port">
-			<a href="/./img/img019watermark.jpg"><img class="img-blue" src="img/img019watermark.jpg" alt="">  </a>
+			<a href="/./img/img019watermark.jpg"><img class="img-blue-hamsa" src="img/img019watermark.jpg" alt="">  </a>
 		</section>
 <div class="clearfix"></div>
 
