changing image 1 from blue to black

--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
 			}
 		</script>
 		<section class="one-third-port">
-			<a href="/./img/img001watermark.jpg"><img class="img-blue-candle" src="img/img001watermark.jpg" alt="">  </a>
+			<a href="/./img/img001watermark.jpg"><img class="img-black-candle" src="img/img001watermark.jpg" alt="">  </a>
 		</section>
 		<section class="one-third-port">
 			<a href="/./img/img002watermark.jpg"><img class="img-blue-hamsa" src="img/img002watermark.jpg" alt="">  </a>
