--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 	<a name="gallery-j">
 		<h2>My Gallery</h2>
 		<input type="text" id="myInputColor" onkeyup="myFunction()" placeholder="Search for color">
-		<input type="text" id="myInputShape" onkeyup="myFunction()" placeholder="Seach for shape">
+		<input type="text" id="myInputShape" onkeyup="myFunction()" placeholder="Search for image design">
 		<script>
 			function sanitizeString(str) {
         		str = str.replace(/[^a-z0-9áéíóúñü \.,_-]/gim, " ");
@@ -108,7 +108,7 @@
 			<a href="/./img/img006watermark.jpg"><img class="img-blue-dreidel" src="img/img006watermark.jpg" alt="">  </a>
 		</section>
 		<section class="one-third-port">
-			<a href="/./img/img007watermark.jpg"><img class="img-blue-tan-candle" src="img/img007watermark.jpg" alt="">  </a>
+			<a href="/./img/img007watermark.jpg"><img class="img-blue-candle" src="img/img007watermark.jpg" alt="">  </a>
 		</section>
 		<section class="one-third-port">
 			<a href="/./img/img008watermark.jpg"><img class="img-black-shofar" src="img/img008watermark.jpg" alt="">  </a>
