--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@ Iris stored hundreds of her "doodles" in a file cabinet for years until she was 
 		<!--<form method="POST" action="https://formsubmit.co/alizaasdf1234@gmail.com" >-->
 		<!--<form method="post" action="htdocs/send_email_to_nechama.php">-->
 			<!--<form method="post" name="myemailform" action="htdocs/send_email.php">-->
-				<form method="post" name="myemailform" action="mailUsingPHPMailer.php">
+				<form method="POST" name="myemailform" action="mailUsingPHPMailer.php">
 				Enter Name:	<input type="text" name="name"> <br/>
 				
 				Enter Email Address:	<input type="email" name="email"><br/>
