--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
 		</div>
 		<section id="judaica-filters">
 		<div class="div">
-			<label style="display:block">Remove all filters</label>
+			<label style="display:block">See all judaica</label>
 			<button name="btn-all" onclick="myFunction('all')">All</button> 
 		</div>
 		<div class="div">
