--- a/index.html
+++ b/index.html
@@ -35,7 +35,8 @@
 	<div class="clearfix"></div>
 
 	<section class="left-col">
-		<h2>About Me</h2>
+		<h2>About The Artist</h2>
+
 		<p>
 			Iris J. Klein
 		</p>
