about the artist

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 	<div class="clearfix"></div>
 
 	<section class="left-col">
-		<h2>About Me</h2>
+		<h2>About The Artist</h2>
 		<!--<p>
 			Iris J. Klein
 		</p>-->
@@ -63,6 +63,7 @@
 			<button class="btn" onclick="myCategory('judaica')">Judaica</button>
 			<button class="btn" onclick="myCategory('geometric')">Geometric/abstract</button> 
 			<button class="btn" onclick="myCategory('photo')">Photography</button>
+		</br><label style="font-size: 24px;">Enhance the design of your choice with colors to match your decor</label>
 		</div>
 		<section id="judaica-filters">
 		<div class="div">
